# rust-maze-generator

./: Cargo.toml
src/: lib.rs  maze.rs
